# gemini_llm_app

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: logging_config.yaml
data/outputs/: SMGPS-stars.txt  SMGPS-stars2.txt  planet-output.txt  safety_output.txt  think-output.txt  think_output.txt
examples/: funccall.py  psumm.py  psumm2.py  quick.py  search.py  think.py
examples/rag/: app.py
src/embeddings/: gemini_embedding.py
src/handlers/: error_handler.py
src/llm/: gemini_client.py  ima_gen.py  lang_gemini.py  quick.py  req.py  safety.py  struct.py  utils.py
src/observability/: arize_observability.py
src/prompt_engineering/: templates.py
src/utils/: doc_split.py  download_file.py  logger.py  rate_limiter.py
