[project]
name = "gemini-llm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai-tools>=0.47.1",
    "google-adk>=1.3.0",
    "google-genai>=1.20.0",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
